src/test/deca/context/valid/objet/3.33-instanceof.deca
// Description:
//    Instance of
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    //TODO faire instanceof pour le cas avec classe
}