src/test/deca/context/invalid/objet/3.33-operation-binaire-instanceof-wrong.deca
// Description:
//    Test 3.3 fail avec instanceof 
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    // TODO instanceof à faire avec les classes
}